--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 .search-bar {
     display: block;
     width: 582px;
-    height: 35px;
+    height: 44px;
     margin: auto;
     border: 1px solid #dfe1e5;
     border-radius: 30px;
@@ -24,6 +24,14 @@
     justify-content: center;
     margin: auto;
 }
-/* .search-buttons button {
-    display: block;
-} */
+.search-button {
+    height: 36px;
+    width: 128px;
+    background-color: #f2f2f2;
+    border-radius: 5px;
+    border-color: #f2f2f2d8;
+    border-style: solid;
+    margin-left: 10px;
+    margin-right: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+}
