added shadow hover on search buttons

--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,9 @@
     margin-right: 10px;
     font-family: Arial, Helvetica, sans-serif;
 }
+.search-button:hover {
+    box-shadow: 0px 0px 1px 1px rgba(0,0,0,0.1);
+}
 .header-link {
     color: #000;
     opacity: 0.75;
