--- a/styles.css
+++ b/styles.css
@@ -79,3 +79,36 @@
     margin-top: 20px;
     margin-right: 25px;
 }
+footer {
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 40px;
+    position: fixed;
+    background: #f2f2f2;;
+    line-height: 40px;
+    min-width: 980px;
+    border-top: 1px solid #e4e4e4;
+}
+.footer-link {
+    color: #333;
+    opacity: 0.75;
+    text-decoration: none;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    padding-left: 20px;
+}
+.footer-link:hover {
+    text-decoration: underline;
+}
+.footer-left-side {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+}
+.footer-right-side {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    margin-right: 30px;
+}
